# simple_robot

./: README.md  package.xml  setup.py
launch/: robot_sim.launch.py
simple_robot/: robot_controller.py  teleop_controller.py
urdf/: planar_movement_robot.urdf  simple_robot.urdf
worlds/: obstacle_world.world  room_world.world
